unpackaged/main/default/objects/Technology_Ticket__c/Technology_Ticket__c.object-meta.xml
<CustomObject>
    <label>Technology Ticket</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Technology Ticket Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Technology Tickets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>