unpackaged/main/default/objects/Technology_Ticket__c/fields/Products__c.field-meta.xml
<CustomField>
    <fullName>Products__c</fullName>
    <label>Products</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Web Application</fullName>
            </value>
            <value>
                <fullName>Mobile Application</fullName>
            </value>
            <value>
                <fullName>Admin Panel</fullName>
            </value>
            <value>
                <fullName>Alchemy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>